--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@gsap/react": "^2.1.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
     "animate.css": "^4.1.1",
     "astro": "^4.15.3",
-    "motion": "^10.18.0"
+    "motion": "^10.18.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
